@@ -37,19 +37,27 @@
 
             <!-- EJEMPLO: Jetty Plugin (no se hereda del parent) -->
             <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.3.0.v20150612</version>
-                <configuration>
-                    <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <httpConnector>
-                        <port>${jetty.port}</port>
-                        <idleTimeout>60000</idleTimeout>
-                    </httpConnector>
-                    <stopKey>foo</stopKey>
-                    <stopPort>${jetty.stop.port}</stopPort>
-                </configuration>
+              <groupId>org.eclipse.jetty</groupId>
+              <artifactId>jetty-maven-plugin</artifactId>
+              <version>9.3.0.v20150612</version>
+              <configuration>
+                  <scanIntervalSeconds>10</scanIntervalSeconds>
+                  <httpConnector>
+                      <port>${jetty.port}</port>
+                      <idleTimeout>60000</idleTimeout>
+                  </httpConnector>
+                  <stopKey>foo</stopKey>
+                  <stopPort>${jetty.stop.port}</stopPort>
+            
+                  <!-- Apertura de módulos para Java 21 -->
+                  <jvmArgs>
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                    --add-opens java.base/java.io=ALL-UNNAMED
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                  </jvmArgs>
+              </configuration>
             </plugin>
+
 
             <!-- WAR Plugin (versión heredada: 3.3.2) -->
             <plugin>
